# division-2-db

./: .dockerignore  .gitignore  .yamllint.yml  404.html  LICENCE  README.md  code.code-workspace  index.html  manage.py  mkdocs.yml  pyproject.toml  sitemap.xml  tasks.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/reqs/: docs-requirements.txt
.github/workflows/: docs-publish.yml
development/: Dockerfile  creds.example.env  dev.env  division_config.py  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.node.yml  docker-compose.requirements.yml  entrypoint.sh
division/: __init__.py
division-spa/: package-lock.json  package.json
division-spa/src/: App.css  App.js
division-spa/src/components/: Footer.jsx
division-spa/src/pages/HomePage/: HomePage.jsx
division-spa/src/tests/: e2e-flow.test.jsx
division/core/: __init__.py  admin.py  apps.py  asgi.py  cli.py  models.py  settings.py  settings_funcs.py  urls.py  views.py  wsgi.py
division/core/management/commands/: post_install.py  start.py
division/core/migrations/: 0001_initial.py  0002_gear.py  0003_skills.py
division/core/models/: __init__.py  gear.py  generics.py  skills.py
division/core/runner/: __init__.py  importer.py  runner.py  settings.py
division/core/templates/: _base.html  _nav.html  about.html  division_config.py.j2  home.html
division/core/tests/: fxt_config.py  test_admin.py  test_home_page.py  test_models.py
division/extras/: __init__.py  apps.py
division/extras/api/: __init__.py
division/project-static/css/: base.css  main.css  utilities.css
docs/: index.md  my-weapons.json
search/: search_index.json
seed/: seed.json
