[tool.poetry]
name = "division"
version = "0.1.0"
description = ""
authors = ["Shorel Aran <builds@psmware.ie>", "The Fail Druid <faildruid@mcleans.ie>"]
readme = "README.md"
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
homepage = "https://github.tools.sap/cpe/netbox-dcam-import"
documentation = "https://pages.github.tools.sap/cpe/netbox-dcam-import"

packages = [{include = "division"}]

[tool.poetry.dependencies]
python = "^3.10"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.6"
pyuwsgi = "^2.0.21"
django-cors-headers = "^4.0.0"
django-crispy-forms = "^2.0"
crispy-bootstrap5 = "^0.7"
django-webserver = "^1.2.0"
jinja2 = "^3.1.2"
django-allauth = "^0.54.0"
drf-spectacular = "^0.26.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
invoke = "^2.1.2"
coverage = "^7.2.5"
flake8 = "^6.0.0"
pydocstyle = "^6.3.0"
pytest = "^7.3.1"
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.14"
mkdocstrings = "^0.21.2"
mkdocstrings-python = "^1.0.0"
mkdocs-material-extensions = "^1.1.1"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
division-server = "division.core.cli:main"

[tool.black]
line-length = 119
target-version = ['py310']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | static
  )/
  | division_config.py     # This is where you define files that should not be stylized by black
  | tasks.py          # the root of the project
)
'''

[tool.pydocstyle]
convention = "google"
inherit = false
match = "(?!(__init__|tasks)).*\\.py"
match_dir = "^(?!(\\..*|venv|\\.venv|tests|migrations|development)).*"
add_ignore = "D212,D106"
